The actual fix for the horizontal scroll home iPad asset problem

--- a/src/assets/scss/components/_screen-block.scss
+++ b/src/assets/scss/components/_screen-block.scss
@@ -14,6 +14,6 @@
   }
 
   @include susy-breakpoint($bp-gargantuan, $susy) {
-    overflow-x: auto;
+    overflow: visible;
   }
 }
